--- a/pkg/components/navbar/navitem/navitem.templ
+++ b/pkg/components/navbar/navitem/navitem.templ
@@ -5,6 +5,14 @@ import (
     "github.com/chrisbward/templstrap.io/pkg/base" 
 )
 
+type NavsAndTabsContextProps struct {
+	//  data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true"
+	Toggle string
+	Target string
+	Role string
+	AriaSelected bool
+}
+
 type NavItemProps struct {
 	base.ElementProps
 	Name          string
@@ -13,7 +21,7 @@ type NavItemProps struct {
 	IsDisabled    bool
 	IsDropdown    bool
 	ChildNavItems []NavItemProps
-	NavsAndTabsContextProps interface{}
+	NavsAndTabsContextProps *NavsAndTabsContextProps
 }
 const RootClassName = "nav-item"
 const RootClassNameNavLink = "nav-link"
@@ -47,11 +55,14 @@ func (nip NavItemProps) BuildClassNamesNavLink() (classes string) {
 
 templ Show(props NavItemProps) {
 	if props.IsDropdown {
-		<li class={ props.BuildClassNames() }>
-			<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"
+		<li class={ props.BuildClassNames() }
 			if props.NavsAndTabsContextProps != nil {
-				thing=""
+				data-bs-toggle="tab"
+				data-bs-target={ "#" + props.NavsAndTabsContextProps.Target}
 			}
+		>
+			<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"
+			
 			>
 				{ props.Name }
 			</a>
@@ -62,7 +73,12 @@ templ Show(props NavItemProps) {
 			</ul>
 		</li>
 	} else {
-		<li class={ props.BuildClassNames() }>
+		<li class={ props.BuildClassNames() }
+			if props.NavsAndTabsContextProps != nil {
+				data-bs-toggle="tab"
+				data-bs-target={ "#" + props.NavsAndTabsContextProps.Target}
+			}
+		>
 			<a class={ props.BuildClassNamesNavLink() } aria-current="page" href={ templ.SafeURL(props.Link) }>{ props.Name }</a>
 		</li>
 	}
