addition of hx-boost, testing

--- a/pkg/components/navbar/navbar.templ
+++ b/pkg/components/navbar/navbar.templ
@@ -2,6 +2,7 @@ package navbar
 
 import (
 	"strings"
+	"fmt"
 	"github.com/chrisbward/templstrap.io/pkg/base"
 	"github.com/chrisbward/templstrap.io/pkg/components/navbar/navitem"
 )
@@ -70,7 +71,7 @@ templ Show(props NavbarProps) {
 					<span class="navbar-toggler-icon"></span>
 				</button>
 			}
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<div  class="collapse navbar-collapse"  id="navbarSupportedContent" hx-boost={fmt.Sprintf("%v",props.HTMX.IsBoosted)} >
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 					for _, NavItem := range props.NavItems {
 						@navitem.Show(navitem.NavItemProps{
