--- a/pkg/components/toasts/toasts.templ
+++ b/pkg/components/toasts/toasts.templ
@@ -1,23 +1,46 @@
 package toasts 
 
 import(
-    "github.com/chrisbward/templstrap.io/pkg/base" 
+	"strings"
+    "github.com/chrisbward/templstrap.io/pkg/base"  
 )
+
+type StyleClass string
+ 
 
 type ToastProps struct {
 	base.ElementProps
+	IconPath string
 	Title   string
 	Message string
+	TimeAgo string
+	StyleClass string
+}
+
+const RootClassName = "toast"
+
+func (tp ToastProps) BuildClassNames() (classes string) {
+	classNames := []string{RootClassName}
+
+	classNames = append(classNames, string(tp.StyleClass))
+
+	classes = strings.Join(classNames, " ")
+
+	return
 }
 
 templ Show(props ToastProps) {
 	<div class="toast-container position-static">
-		<div class="toast" id={ props.Id } role="alert" aria-live="assertive" aria-atomic="true">
+		<div class={ props.BuildClassNames() } id={ props.Id } role="alert" aria-live="assertive" aria-atomic="true">
 		if props.Title != "" {
 			<div class="toast-header">
-				<img src="..." class="rounded me-2" alt="..."/>
+				if props.IconPath != "" {
+					<img src="..." class="rounded me-2" alt="..."/>
+				}
 				<strong class="me-auto">{ props.Title }</strong>
-				<small>11 mins ago</small>
+				if props.TimeAgo != "" {
+					<small>{props.TimeAgo}</small>
+				} 
 				<button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
 			</div>
 		}
