added id to close button

--- a/pkg/components/closebutton/closebutton.templ
+++ b/pkg/components/closebutton/closebutton.templ
@@ -10,6 +10,7 @@ type CloseButtonProps struct {
 
 templ Show(props CloseButtonProps) {
 	<button
+		id={props.Id}
 		type="button"
 		class="btn-close"
 		aria-label="Close"
