textarea updated with name attr

--- a/pkg/forms/textarea/textarea.templ
+++ b/pkg/forms/textarea/textarea.templ
@@ -16,6 +16,7 @@ templ Show(props TextAreaProps) {
     <textarea 
         class="form-control" 
         id={ props.Id }
+        name={ props.Id }
         rows={ fmt.Sprint(props.Rows) }
     ></textarea>
 }
