conditional encoding type

--- a/pkg/forms/form/form.templ
+++ b/pkg/forms/form/form.templ
@@ -61,7 +61,9 @@ templ Show(props FormProps) {
 			method={ props.Action.Method }
 			class={ props.BuildClassNames() }
 			id={ props.ElementProps.Id }
-			enctype={ props.EncodingType }
+			if props.EncodingType != "" {
+				enctype={ props.EncodingType }
+			}
 			if props.ElementProps.HTMX.Encoding != "" {
 				hx-encoding={ props.ElementProps.HTMX.Encoding }
 			}
