--- a/pkg/components/progress/progress.templ
+++ b/pkg/components/progress/progress.templ
@@ -15,14 +15,12 @@ func (pp ProgressProps) PercentStyleString() (percent string) {
 	return fmt.Sprintf("width: %d", pp.Percentage)
 }
 
-css className() {
-	background-color: #ffffff;
-	width: "{ blue }%";
+css progress(percent int) {
+	width: { fmt.Sprintf("%d%%", percent) };
 }
-
 
 templ Show(props ProgressProps) {
 	<div id={ props.Id } class="progress" role="progressbar" aria-label={ props.AriaLabel } aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
-		<div class="progress-bar" style=""></div>
+		<div class={"progress-bar", progress(props.Percentage) } style=""></div>
 	</div>
 }
