added min,max,steps to number input field logic

--- a/pkg/forms/inputfield/inputfield.templ
+++ b/pkg/forms/inputfield/inputfield.templ
@@ -30,6 +30,10 @@ type InputProps struct {
 	DatalistItems                  []string
 	Validation                     entities.FormFieldValidation
 	ExtraAttributes                map[string]any
+
+	Min   float32
+	Max   float32
+	Step  float32
 }
 
 func (ip InputProps) GetInputType() (inputType entities.FormFieldType) {
@@ -71,6 +75,17 @@ templ Show(props InputProps) {
 		readonly?={ props.IsReadOnly }
 		disabled?={ props.IsDisabled }
 		required?={ props.Validation.IsRequired }
+		if props.GetInputType().InputType == entities.NumberType {
+			if props.Min != 0 {
+				min={fmt.Sprintf("%v",props.Min)}
+			}
+			if props.Max != 0 {
+				max={fmt.Sprintf("%v",props.Max)}
+			}
+			if props.Step != 0 {
+				step={fmt.Sprintf("%v",props.Step)}
+			}
+		}
 		{ props.ExtraAttributes... }
 	/>
 	if props.GetInputType().InputType == entities.DatalistType {
