incorrect targeting of element with label fixed value, now fixed

--- a/pkg/forms/checks/checks.templ
+++ b/pkg/forms/checks/checks.templ
@@ -45,7 +45,7 @@ templ Show(props ChecksProps) {
 			value="true"
 			checked?={ props.IsChecked }
 		/>
-		<label class="form-check-label" for="flexCheckChecked">
+		<label class="form-check-label" for={ props.Id } >
 			{ props.LabelText }
 		</label>
 	</div>
