--- a/pkg/forms/select/select.templ
+++ b/pkg/forms/select/select.templ
@@ -4,8 +4,8 @@ import (
 	"fmt"
 	"github.com/chrisbward/templstrap.io/pkg/base"
 	"github.com/chrisbward/templstrap.io/pkg/forms/select/selectoption"
-	"strings"
 	"github.com/chrisbward/templstrap.io/testsuite/entities"
+	"strings"
 )
 
 const RootClassName = "form-select"
@@ -23,11 +23,12 @@ type SelectMultipleProps struct {
 
 type SelectProps struct {
 	base.FormElementProps
-	Size            SizingType
-	SelectAnItemCue string
-	Options         []selectoption.SelectOptionProps
-	Validation                     entities.FormFieldValidation
-	MutipleProps    SelectMultipleProps
+	Size              SizingType
+	SelectAnItemCue   string
+	SelectedItemValue string
+	Options           []selectoption.SelectOptionProps
+	Validation        entities.FormFieldValidation
+	MutipleProps      SelectMultipleProps
 }
 
 func (sp SelectProps) BuildClassNames() (classes string) {
@@ -44,6 +45,14 @@ func (sp SelectProps) BuildClassNames() (classes string) {
 	return
 }
 
+func SelectOptions(options []selectoption.SelectOptionProps, selectedItemValue string) []selectoption.SelectOptionProps {
+	if selectedItemValue == ""{
+		return options
+	}
+
+	return options
+}
+
 templ Show(props SelectProps) {
 	<select
 		class="form-select"
@@ -56,9 +65,10 @@ templ Show(props SelectProps) {
 		name={ props.Id }
 	>
 		if props.SelectAnItemCue != "" {
-			<option value="" disabled required>{props.SelectAnItemCue}</option>
-		} 
-		for _, selectOptionProps := range props.Options {
+			<option value="" disabled required>{ props.SelectAnItemCue }</option>
+		}
+	 
+		for _, selectOptionProps := range SelectOptions(props.Options, props.SelectedItemValue) {
 			@selectoption.Show(selectOptionProps)
 		}
 	</select>
