--- a/testsuite/pages/forms/view/forms.templ
+++ b/testsuite/pages/forms/view/forms.templ
@@ -78,7 +78,9 @@ templ Show(props entities.IPageProps) {
 								},
 							},
 							Placeholder: "Enter your username",
-							Type: entities.TextType,
+							Type: entities.FormFieldType{
+								InputType: entities.TextType,
+							},
 						}),
 					})
 					@formfield.Show(formfield.FormFieldProps{
@@ -98,7 +100,9 @@ templ Show(props entities.IPageProps) {
 								},
 							},
 							Placeholder: "example-url",
-							Type: entities.TextType,
+							Type: entities.FormFieldType{
+								InputType: entities.TextType,
+							},
 						}),
 						InputGroup: formfield.InputGroup{
 							InputGroup: inputgrouptext.Show(
@@ -130,7 +134,9 @@ templ Show(props entities.IPageProps) {
 								},
 							},
 							Placeholder: "Enter your email",
-							Type: entities.EmailType,
+							Type: entities.FormFieldType{
+								InputType: entities.EmailType,
+							},
 						}),
 						InputGroup: formfield.InputGroup{
 							InputGroup: inputgrouptext.Show(
@@ -158,7 +164,9 @@ templ Show(props entities.IPageProps) {
 								},
 							},
 							Placeholder: "Enter your other email",
-							Type: entities.EmailType,
+							Type: entities.FormFieldType{
+								InputType: entities.EmailType,
+							},
 						}),
 						InputGroup: formfield.InputGroup{
 							InputGroup: inputgrouptext.Show(
@@ -186,7 +194,9 @@ templ Show(props entities.IPageProps) {
 									Id: "txbPassword",
 								},
 							},
-							Type: entities.PasswordType,
+							Type: entities.FormFieldType{
+								InputType: entities.PasswordType,
+							},
 						}),
 					})
 					@formfield.Show(formfield.FormFieldProps{
@@ -205,7 +215,9 @@ templ Show(props entities.IPageProps) {
 									Id: "txbPassword",
 								},
 							},
-							Type: entities.PasswordType,
+							Type: entities.FormFieldType{
+								InputType: entities.PasswordType,
+							},
 						}),
 					})
 					@formfield.Show(formfield.FormFieldProps{
@@ -224,7 +236,9 @@ templ Show(props entities.IPageProps) {
 									Id: "txbPickColor",
 								},
 							},
-							Type: entities.ColorType,
+							Type: entities.FormFieldType{
+								InputType: entities.ColorType,
+							},
 						}),
 					})
 					@formfield.Show(formfield.FormFieldProps{
@@ -243,7 +257,9 @@ templ Show(props entities.IPageProps) {
 									Id: "txbDatalist",
 								},
 							},
-							Type: entities.DatalistType,
+							Type: entities.FormFieldType{
+								InputType: entities.DatalistType,
+							},
 							DatalistItems: []string{"chris", "squeak", "steve"},
 						}),
 					})
@@ -263,7 +279,7 @@ templ Show(props entities.IPageProps) {
 									Id: "ddSelectAnItem",
 								},
 							},
-							Options: []selectoption.SelectOptionProps{
+							Options: []*selectoption.SelectOptionProps{
 								{Label: "item", Value: "itemval"},
 								{Label: "item2", Value: "itemval2"},
 								{Label: "item3", Value: "itemval3"},
@@ -286,7 +302,9 @@ templ Show(props entities.IPageProps) {
 									Id: "fuFileUpload",
 								},
 							},
-							Type: entities.FileType,
+							Type: entities.FormFieldType{
+								InputType: entities.FileType,
+							},
 						}),
 					})
 					@formfield.Show(formfield.FormFieldProps{
