--- a/pkg/base/head/head.templ
+++ b/pkg/base/head/head.templ
@@ -17,7 +17,7 @@ templ Show(props HeadProps) {
 			<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"/>
 		}
 		if props.IsHTMXEnabled {
-			<script src="https://unpkg.com/htmx.org@1.9.10" integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC" crossorigin="anonymous"></script>
+			<link rel="preload" href="https://unpkg.com/htmx.org@1.9.10" as="script"> 
 		}
 		{ children... }
 	</head>
