refactor for datalist

--- a/pkg/forms/datalist/datalist.templ
+++ b/pkg/forms/datalist/datalist.templ
@@ -10,7 +10,7 @@ import (
 type DatalistProps struct {
 	base.FormElementProps
 	Placeholder                    string
-	Items                          []entities.FormListItem
+	Items                          []base.FormListProps
 	FieldValidationFeedbackMessage string
 	Validation                     entities.FormFieldValidation
 }
