implementation of radio form control

--- a/pkg/forms/radio/radio.templ
+++ b/pkg/forms/radio/radio.templ
@@ -1,16 +1,40 @@
 package radio
 
-templ Show() {
-	<div class="form-check">
-		<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1"/>
-		<label class="form-check-label" for="flexRadioDefault1">
-			Default radio
-		</label>
-	</div>
-	<div class="form-check">
-		<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked/>
-		<label class="form-check-label" for="flexRadioDefault2">
-			Default checked radio
-		</label>
-	</div>
+import (
+	"strings"
+	"github.com/chrisbward/templstrap.io/pkg/base"
+	"github.com/chrisbward/templstrap.io/testsuite/entities"
+
+)
+const RootClassName = "form-check"
+
+type RadioProps struct {
+	base.FormElementProps
+	Validation                     entities.FormFieldValidation
+	IsSelected bool
+}
+
+func (rp RadioProps) BuildClassNames() (classes string) {
+	classNames := []string{RootClassName}
+
+	if rp.Validation.ValidationState == entities.FieldIsInvalidValidationStatusType {
+		classNames = append(classNames, string(entities.FieldIsInvalidValidationStatusType))
+	}
+	if rp.Validation.ValidationState == entities.FieldIsValidValidationStatusType {
+		classNames = append(classNames, string(entities.FieldIsValidValidationStatusType))
+	}
+
+	classes = strings.Join(classNames, " ")
+
+	return
+}
+
+
+templ Show(props RadioProps) {
+	<div 
+		class={ props.BuildClassNames() }
+	> 
+		<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" />
+		{ children... } 
+	</div> 
 }
