--- a/pkg/forms/radio/radio.templ
+++ b/pkg/forms/radio/radio.templ
@@ -12,6 +12,7 @@ type RadioProps struct {
 	base.FormElementProps
 	Validation                     entities.FormFieldValidation
 	IsSelected bool
+	GroupName string
 }
 
 func (rp RadioProps) BuildClassNames() (classes string) {
@@ -34,7 +35,12 @@ templ Show(props RadioProps) {
 	<div 
 		class={ props.BuildClassNames() }
 	> 
-		<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" />
+		<input 
+			class="form-check-input" 
+			type="radio" 
+			name={ props.GroupName } 
+			id={ props.ElementProps.Id } 
+		/>
 		{ children... } 
 	</div> 
 }
