using base element props

--- a/pkg/components/offcanvas/offcanvas.templ
+++ b/pkg/components/offcanvas/offcanvas.templ
@@ -27,7 +27,7 @@ const (
 	 ExtraExtraLarge SizeType = "-xxl"
 )
 type OffCanvasProps struct {
-	base.FormElementProps
+	base.ElementProps
 	Title string
 	OffCanvasPlacement OffCanvasPlacementClass
 	Size                           SizeType
