--- a/pkg/components/offcanvas/offcanvas.templ
+++ b/pkg/components/offcanvas/offcanvas.templ
@@ -1,50 +1,54 @@
 package offcanvas
 
-import(
+import (
 	"fmt"
-	"strings"
 	"github.com/chrisbward/templstrap.io/pkg/base"
+	"strings"
 )
 
 const RootClassName = "offcanvas"
 
 type OffCanvasPlacementClass string
 
-const(
-	OffCanvasStartPlacement OffCanvasPlacementClass = "start"
-	OffCanvasEndPlacement OffCanvasPlacementClass = "end"
-	OffCanvasTopPlacement OffCanvasPlacementClass = "top"
+const (
+	OffCanvasStartPlacement  OffCanvasPlacementClass = "start"
+	OffCanvasEndPlacement    OffCanvasPlacementClass = "end"
+	OffCanvasTopPlacement    OffCanvasPlacementClass = "top"
 	OffCanvasBottomPlacement OffCanvasPlacementClass = "bottom"
 )
 
 type SizeType string
 
 const (
-	 Small SizeType = "-sm" 
-	 Medium SizeType = "-md"
-	 Large SizeType = "-lg"
-	 ExtraLarge SizeType = "-xl"
-	 ExtraExtraLarge SizeType = "-xxl"
+	Small           SizeType = "-sm"
+	Medium          SizeType = "-md"
+	Large           SizeType = "-lg"
+	ExtraLarge      SizeType = "-xl"
+	ExtraExtraLarge SizeType = "-xxl"
 )
+
 type OffCanvasProps struct {
 	base.ElementProps
-	Title string
+	Title              string
+	IsShown            bool
 	OffCanvasPlacement OffCanvasPlacementClass
-	Size                           SizeType
-	ExtraAttributes                map[string]any
+	Size               SizeType
+	ExtraAttributes    map[string]any
 }
 
 func (ocp OffCanvasProps) BuildClassNames() (classes string) {
 	classNames := []string{}
 
- 	classNames = append(
+	classNames = append(
 		classNames, fmt.Sprintf("%s%s", RootClassName, string(ocp.Size)),
 	)
 	classNames = append(
 		classNames, fmt.Sprintf("%s-%s", RootClassName, string(ocp.OffCanvasPlacement)),
 	)
- 
- 
+	if ocp.IsShown{
+		classNames = append( classNames, "show")
+	}
+
 	classes = strings.Join(classNames, " ")
 
 	return
@@ -53,8 +57,8 @@ func (ocp OffCanvasProps) BuildClassNames() (classes string) {
 templ Show(props OffCanvasProps) {
 	<div
 		class={ props.BuildClassNames() }
-	 	tabindex="-1" 
-		id={ props.Id } 
+		tabindex="-1"
+		id={ props.Id }
 		aria-labelledby="offcanvasLabel"
 	>
 		<div class="offcanvas-header">
