addition of htmx properties to anchor for button component

--- a/pkg/components/buttons/buttons.templ
+++ b/pkg/components/buttons/buttons.templ
@@ -72,23 +72,24 @@ func (bp *ButtonProps) BuildClassNames() (classNames string) {
 
 templ Show(props ButtonProps) {
 	if props.ButtonElementType == "" || props.ButtonElementType == ButtonButtonType {
-		<button 
-			id={ props.ElementProps.Id } 
-			type={ string(props.ButtonType) } 
-			class={ props.BuildClassNames() } 
+		<button
+			id={ props.ElementProps.Id }
+			type={ string(props.ButtonType) }
+			class={ props.BuildClassNames() }
 			disabled?={ props.IsDisabled }
-			{ props.ExtraAttributes... }	
+			{ props.ExtraAttributes... }
 			{ props.HTMX.GetAttributes()... }
 		>
 			{ children... }
 		</button>
 	}
 	if props.ButtonElementType == AnchorButtonType {
-		<a 
-			class={ props.BuildClassNames() } 
-			href={templ.SafeURL(props.AnchorTypeLink)} 
+		<a
+			class={ props.BuildClassNames() }
+			href={ templ.SafeURL(props.AnchorTypeLink) }
 			role="button"
 			{ props.ExtraAttributes... }
+			{ props.HTMX.GetAttributes()... }
 		>
 			{ children... }
 		</a>
