bugfix for pagination

--- a/pkg/components/pagination/pagination.templ
+++ b/pkg/components/pagination/pagination.templ
@@ -23,7 +23,7 @@ func (pc *PageConditions) IsCurrentPage(pageNumber int) bool {
 	return pc.CurrentPage == pageNumber
 }
 func (pc *PageConditions) IsPageDisabled(pageNumber int) bool {
-	if pc.PageIsDisabledUnderCondition != nil {
+	if pc.PageIsDisabledUnderCondition == nil {
 		return false
 	}
 	return (*pc.PageIsDisabledUnderCondition)(pageNumber)
@@ -46,7 +46,7 @@ type PaginationProps struct {
 
 func (pp PaginationProps) BuildClassName() (classes string) {
 	classNames := []string{RootClassName} 
-	
+
 	classes = strings.Join(classNames, " ")
 
 	return
